# llm_tutorial

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  developerguide.md  directorystructure.md  gitignore.txt  pre-commit-config.yaml  prompt_template.md  pyproject.toml  technologystack.md
.github/workflows/: ai-pr-reviewer.yml  benchmark.yml  ci.yml  claude_code_review.yaml
src/llm_tutorial/: 00_llm_tutorial.py  __init__.py
src/project_name/core/: example.py
src/project_name/utils/: helpers.py
template/src/template_package/: __init__.py
template/src/template_package/core/: example.py
template/src/template_package/utils/: helpers.py  logging_config.py
template/tests/: conftest.py
template/tests/unit/: test_logging.py
tests/: conftest.py
tests/unit/: test_example.py
