[project]
name = "llm-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thashiguchi1995", email = "hassy0919@gmail.com" }
]
requires-python = ">=3.11.7"
dependencies = [
    "hydra-core>=1.3.2",
    "mypy>=1.15.0",
    "openai>=1.78.1",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.10",
    "taskipy>=1.14.1",
    "wandb>=0.19.11",
    "weave>=0.51.47",
]

[project.scripts]
llm-tutorial = "llm_tutorial:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
